--- a/src/resources/postcss/tickets-tables.pcss
+++ b/src/resources/postcss/tickets-tables.pcss
@@ -172,43 +172,6 @@
 		}
 	}
 
-
-	button.tribe-toggle-row {
-		background: rgba(0, 0, 0, 0);
-		border: none;
-		display: none;
-		height: 40px;
-		outline: none;
-		padding: 0;
-		position: absolute;
-		right: 8px;
-		top: 10px;
-		width: 40px;
-
-		@media screen and (max-width: 782px) {
-			display: block;
-		}
-
-		&:hover {
-			cursor: pointer;
-		}
-
-		&::before {
-			-webkit-border-radius: 50%;
-			border-radius: 50%;
-			color: #444;
-			content: '\f140';
-			display: block;
-			font: normal 20px/1 dashicons;
-			left: 10px;
-			line-height: 1;
-			padding: 1px 2px 1px 0;
-			position: absolute;
-			speak: none;
-			top: -5px;
-		}
-	}
-
 	@media screen and ( max-width: 782px ) {
 		td.ticket_edit {
 			position: absolute;
